[project]
name = "ai-courtroom-2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cerebras-cloud-sdk>=1.46.0",
    "educhain>=0.3.10",
    "langchain-cerebras>=0.5.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.48.0",
]
